# pharos-one

./: Sidebar.tsx  Taskfile.yml  docker-compose.yml  package.json
.github/: README.md  labels.yml
apps/web/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/app/: Cargo.toml  tauri.conf.json
apps/web/src-tauri/app/src/: lib.rs
apps/web/src-tauri/crates/application/src/: lib.rs
apps/web/src-tauri/crates/application/src/inventory/: mod.rs  operations.rs
apps/web/src-tauri/crates/core/src/: database.rs  datetime.rs  error.rs
apps/web/src-tauri/crates/domain/src/inventory/: entities.rs  mod.rs  services.rs
apps/web/src-tauri/crates/events/: Cargo.toml
apps/web/src-tauri/crates/infrastructure/: Cargo.toml
apps/web/src-tauri/crates/infrastructure/src/: container.rs  lib.rs
apps/web/src-tauri/crates/infrastructure/src/audit/entities/: audit_log.rs  mod.rs
apps/web/src-tauri/crates/infrastructure/src/audit/repositories/: audit_log_repository.rs  mod.rs
apps/web/src-tauri/crates/infrastructure/src/branch/entities/: customer_branch.rs
apps/web/src-tauri/crates/infrastructure/src/branch/repositories/: customer_branch_repository.rs
apps/web/src-tauri/crates/infrastructure/src/customer/entities/: mod.rs  phone_number.rs
apps/web/src-tauri/crates/infrastructure/src/customer/repositories/: mod.rs
apps/web/src-tauri/crates/infrastructure/src/inventory/: entities.rs  mapper.rs  mod.rs  repository.rs
apps/web/src-tauri/crates/infrastructure/src/inventory/entities/: branch_inventory.rs  category.rs  mod.rs  product.rs  product_batch.rs  product_unit_config.rs  unit_conversion.rs
apps/web/src-tauri/crates/infrastructure/src/inventory/repositories/: category_repository.rs  mod.rs  product_batch_repository.rs  product_unit_config_repository.rs  r001_product_type_repository.rs  r002_manufacturer_repository.rs  r003_category_repository.rs  r004_supplier_repository.rs  r005_product_repository.rs  r006_inventory_item_repository.rs  r007_stock_transaction_repository.rs  r008_barcode_repository.rs  unit_conversion_repository.rs
apps/web/src-tauri/crates/infrastructure/src/sales/entities/: register.rs  sale_transaction.rs
apps/web/src-tauri/crates/infrastructure/src/sales/repositories/: payment_repository.rs  register_repository.rs  sale_transaction_repository.rs
apps/web/src-tauri/crates/infrastructure/src/transactions/repositories/: mod.rs
apps/web/src-tauri/crates/infrastructure/src/user/entities/: mod.rs  password_reset_token.rs  permission.rs  role.rs  role_permission.rs  session.rs  staff_member.rs  user.rs
apps/web/src-tauri/crates/infrastructure/src/user/repositories/: mod.rs  permission_repository.rs
apps/web/src-tauri/crates/tauri-commands/: Cargo.toml
apps/web/src-tauri/crates/tauri-commands/src/: inventory.rs  lib.rs
apps/web/src-tauri/crates/tauri-commands/src/audit/: operations.rs
apps/web/src-tauri/crates/tauri-commands/src/branch/: mod.rs
apps/web/src-tauri/crates/tauri-commands/src/customer/: mod.rs  operations.rs
apps/web/src-tauri/crates/tauri-commands/src/inventory/: operations.rs
apps/web/src-tauri/crates/tauri-commands/src/sales/: mod.rs
apps/web/src-tauri/crates/tauri-commands/src/transactions/: mod.rs
apps/web/src-tauri/crates/tauri-commands/src/user/: mod.rs  operations.rs
apps/web/src-tauri/migrations/: Cargo.toml
apps/web/src-tauri/migrations/src/: lib.rs  m20240101_create_medicines.rs  m20260324_000004_create_suppliers.rs  m20260324_000005_create_products.rs  m20260324_000008_create_barcodes.rs  main.rs
docker/: README.md
(+431 files in other folders)
