[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/domain",
    "crates/application",
    "crates/infrastructure",
    "crates/events",
    "crates/tauri-commands",
    "migrations",
    "app",
]
default-members = ["app"]

[workspace.dependencies]
# Core
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
thiserror = "2.0.18"
async-trait = "0.1.89"

# Date/Time
chrono = { version = "0.4.44", features = ["serde"] }

# UUID
uuid = { version = "1.22.0", features = ["v7", "serde"] }

# Database
sea-orm = { version = "1.1.19", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
sea-orm-migration = "1.1.19"

# Tauri
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2.8.0"
tauri-build = { version = "2.5.6", features = [] }

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Builder
typed-builder = "0.23.2"
derive-getters = "0.5.0"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pharos Team"]
license = "MIT"
